--- a/simpar/configs/config_grpo_clip.yaml
+++ b/simpar/configs/config_grpo_clip.yaml
@@ -10,7 +10,7 @@ system_prompt: "You are a helpful AI Assistant that provides well-reasoned and d
 
 # GRPO trainer config
 bf16: true
-use_vllm: true
+use_vllm: false
 vllm_device: auto
 vllm_gpu_memory_utilization: 0.7
 
