装了vllm,能跑但是OOM，准备打印图片看看生成效果

--- a/simpar/configs/config_grpo_clip.yaml
+++ b/simpar/configs/config_grpo_clip.yaml
@@ -1,5 +1,5 @@
 # Model arguments
-model_name_or_path: checkpoints/Qwen2.5-0.5B-Instruct
+model_name_or_path: checkpoints/SimpleAR/simplear_0.5B_rl
 torch_dtype: bfloat16
 attn_implementation: sdpa
 
@@ -10,7 +10,7 @@ system_prompt: "You are a helpful AI Assistant that provides well-reasoned and d
 
 # GRPO trainer config
 bf16: true
-use_vllm: false
+use_vllm: true
 vllm_device: auto
 vllm_gpu_memory_utilization: 0.7
 
